this is my first update

--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ nav .navborder{
 #banner{
   background-image: linear-gradient(to bottom right, #c5e8f2, #f6f6f6);
   /* max-width: 1382px;  */
-  background-size: 1275px;
+  background-size: 67%;
   background-repeat: no-repeat;
   padding-top: 180px;
   padding-bottom: 313px;
